Add api get blog or tag by slug
